--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="bars">
 
             <div class="bars-box">
-                <h3>C</h3>
+                <h3>HTML5</h3>
                 <span>90%</span>
                 <div class="light-bar"></div>
                 <div class="percent-bar html-bar"></div>
